Update CI process od storage building

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 # 
 # 
 MAIN_SERVER_ADDRESS=host.docker.internal
+
+BOOKINGS_DB_USER=root
+BOOKINGS_DB_PASSWORD=fw324fe
+BOOKINGS_DB_PORT=27017
+
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
