--- a/docker-compose.storage.yml
+++ b/docker-compose.storage.yml
@@ -13,17 +13,23 @@ services:
       - bookings-db
       - rabbitMQ
     environment:
-      Bookings_Storage_DB_PASSWORD: "fw324fe"
-      Bookings_Storage_RabbitMqHost: "${MAIN_SERVER_ADDRESS}"
+      Bookings_Storage_DB_USER: "${BOOKINGS_DB_USER}"
+      Bookings_Storage_DB_PASSWORD: "${BOOKINGS_DB_PASSWORD}"
+      Bookings_Storage_DB_HOST: "${MAIN_SERVER_ADDRESS}"
+      Bookings_Storage_DB_PORT: "${BOOKINGS_DB_PORT}"
+      Bookings_Storage_RabbitMq_Host: "${MAIN_SERVER_ADDRESS}"
+      Bookings_Storage_RabbitMq_User: "${RABBITMQ_USER}"
+      Bookings_Storage_RabbitMq_Password: "${RABBITMQ_PASSWORD}"
 
   bookings-db:
     restart: always
     image: mongo:6.0.7
+    command: --bind_ip_all
     volumes:
         - ./data/bookings-data:/data/db
     environment:  
-        MONGO_INITDB_ROOT_USERNAME: root
-        MONGO_INITDB_ROOT_PASSWORD: fw324fe
+        MONGO_INITDB_ROOT_USERNAME: "${BOOKINGS_DB_USER}"
+        MONGO_INITDB_ROOT_PASSWORD: "${BOOKINGS_DB_PASSWORD}"
     networks:
       - proxy
     ports:
@@ -37,8 +43,8 @@ services:
       NAME: "rabbitmq"
     environment:
       RABBITMQ_DEFAULT_VHOST: "/"
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+      RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
+      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASSWORD}"
     networks:
       - proxy
     ports:
