--- a/Bookings.Storage/Bookings.Storage.csproj
+++ b/Bookings.Storage/Bookings.Storage.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bookings.Bus\Bookings.Bus.csproj" />
     <ProjectReference Include="..\Bookings.Repositories\Bookings.Repositories.csproj" />
   </ItemGroup>
 
