--- a/Bookings.Bus/Bookings.Bus.csproj
+++ b/Bookings.Bus/Bookings.Bus.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.0.16" />
+  </ItemGroup>
+
 </Project>
