--- a/Bookings.Domain/Bookings.Domain.csproj
+++ b/Bookings.Domain/Bookings.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.20.0" />
   </ItemGroup>
 
