--- a/Bookings.Main/Bookings.Main.csproj
+++ b/Bookings.Main/Bookings.Main.csproj
@@ -17,6 +17,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="MassTransit" Version="8.0.16" />
+		<PackageReference Include="MassTransit.MongoDb" Version="8.0.16" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.0.16" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 			<PrivateAssets>all</PrivateAssets>
@@ -26,6 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Bookings.Bus\Bookings.Bus.csproj" />
 	  <ProjectReference Include="..\Bookings.Domain\Bookings.Domain.csproj" />
 	</ItemGroup>
 
