--- a/Bookings.Main/Properties/launchSettings.json
+++ b/Bookings.Main/Properties/launchSettings.json
@@ -5,7 +5,14 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Api_Storage_DB_USER": "root",
+        "Api_Storage_DB_PASSWORD": "fw324fe",
+        "Api_Storage_DB_HOST": "localhost",
+        "Api_Storage_DB_PORT": "27017",
+        "Api_Storage_RabbitMq_Host": "localhost",
+        "Api_Storage_RabbitMq_User": "guest",
+        "Api_Storage_RabbitMq_Password": "guest"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7183;http://localhost:5183"
