--- a/Bookings.Storage/Properties/launchSettings.json
+++ b/Bookings.Storage/Properties/launchSettings.json
@@ -4,7 +4,13 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "Bookings_Storage_RabbitMqHost": "localhost"
+        "Bookings_Storage_DB_USER": "root",
+        "Bookings_Storage_DB_PASSWORD": "fw324fe",
+        "Bookings_Storage_DB_HOST": "localhost",
+        "Bookings_Storage_DB_PORT": "27017",
+        "Bookings_Storage_RabbitMq_Host": "localhost",
+        "Bookings_Storage_RabbitMq_User": "guest",
+        "Bookings_Storage_RabbitMq_Password": "guest"
       },
       "applicationUrl": "http://localhost:5073;https://localhost:7073",
       "dotnetRunMessages": true
