--- a/Bookings.Storage/appsettings.Development.json
+++ b/Bookings.Storage/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "BookingDatabase": {
+    "ConnectionString": "mongodb://root:fw324fe@localhost:27017/?authMechanism=DEFAULT",
+    "DatabaseName": "BookingStore",
+    "BookingsCollectionName": "Bookings",
+    "HotelsCollectionName": "Hotels",
+    "ClientsCollectionName": "Clients"
   }
 }
