Huge improvements - moving to clean code

--- a/Bookings.Main/appsettings.Development.json
+++ b/Bookings.Main/appsettings.Development.json
@@ -12,5 +12,8 @@
     "BookingsStateCollectionName": "BookingsState",
     "HotelsCollectionName": "Hotels",
     "ClientsCollectionName": "Clients"
+  },
+  "StorageEndpoint": {
+    "Address": "https://localhost:7073"
   }
 }
