--- a/Bookings.Domain/Bookings.Domain.csproj
+++ b/Bookings.Domain/Bookings.Domain.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.20.0" />
+    <PackageReference Include="Riok.Mapperly" Version="3.3.0" />
   </ItemGroup>
 
 </Project>
