--- a/Bookings.Main/Bookings.Api.csproj
+++ b/Bookings.Main/Bookings.Api.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>0122cea0-9b86-4e6d-9d6e-9579f575e50e</UserSecretsId>
@@ -9,13 +9,6 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Google.Protobuf" Version="3.23.4" />
-		<PackageReference Include="Grpc.AspNetCore" Version="2.55.0" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.55.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.56.2">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
 		<PackageReference Include="MassTransit" Version="8.0.16" />
 		<PackageReference Include="MassTransit.MongoDb" Version="8.0.16" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.0.16" />
@@ -27,13 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Bookings.Bus\Bookings.Bus.csproj" />
-	  <ProjectReference Include="..\Bookings.Domain\Bookings.Domain.csproj" />
-	  <ProjectReference Include="..\Bookings.Services\Bookings.Services.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Protobuf Include="..\Protos\bookings.proto" GrpcServices="Client" />
+	  <ProjectReference Include="..\Bookings.Application\Bookings.Infrastructure.csproj" />
 	</ItemGroup>
 	
 </Project>
