Some improvements including .net bump up to 8 version

--- a/Bookings.Api/Bookings.Api.csproj
+++ b/Bookings.Api/Bookings.Api.csproj
@@ -20,7 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Bookings.Application\Bookings.Infrastructure.csproj" />
+	  <ProjectReference Include="..\Bookings.Infrastructure\Bookings.Infrastructure.csproj" />
 	</ItemGroup>
 	
 </Project>
