--- a/Bookings.Api/Dockerfile
+++ b/Bookings.Api/Dockerfile
@@ -7,17 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["Bookings.Storage/Bookings.Storage.csproj", "Bookings.Storage/"]
-RUN dotnet restore "Bookings.Storage/Bookings.Storage.csproj"
+COPY ["Bookings.Api/Bookings.Api.csproj", "Bookings.Api/"]
+RUN dotnet restore "Bookings.Api/Bookings.Api.csproj"
 COPY . .
-COPY ./Protos ./Protos
-WORKDIR "/src/Bookings.Storage"
-RUN dotnet build "Bookings.Storage.csproj" -c Release -o /app/build
+WORKDIR "/src/Bookings.Api"
+RUN dotnet build "Bookings.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Bookings.Storage.csproj" -c Release -o /app/publish
+RUN dotnet publish "Bookings.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Bookings.Storage.dll"]
+ENTRYPOINT ["dotnet", "Bookings.Api.dll"]
