--- a/Bookings.Repositories/Bookings.Repositories.csproj
+++ b/Bookings.Repositories/Bookings.Repositories.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bookings.Domain\Bookings.Domain.csproj" />
+    <ProjectReference Include="..\Bookings.Infrastructure\Bookings.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
