--- a/Bookings.Repositories/Bookings.Repositories.csproj
+++ b/Bookings.Repositories/Bookings.Repositories.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
+    <PackageReference Include="ServiceCollection.Extensions.Modules" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
