--- a/docker-compose.api.yml
+++ b/docker-compose.api.yml
@@ -5,13 +5,14 @@ services:
     build:
       context: .
       dockerfile: Bookings.Api/Dockerfile
+    container_name: bookings-api
     networks:
       - proxy
     ports:
-      - 8081:80
-#    depends_on:
-#      - bookings-db
-#      - rabbitMQ
+      - 8080:80
+    depends_on:
+      - bookings-db
+      - bookings-rabbitMQ
     environment:
       Api_DB_USER: "${BOOKINGS_DB_USER}"
       Api_DB_PASSWORD: "${BOOKINGS_DB_PASSWORD}"
@@ -20,7 +21,43 @@ services:
       Api_RabbitMq_Host: "${MAIN_SERVER_ADDRESS}"
       Api_RabbitMq_User: "${RABBITMQ_USER}"
       Api_RabbitMq_Password: "${RABBITMQ_PASSWORD}"
-      Api_StorageEndpoint_Address: "${MAIN_SERVER_ADDRESS}:8080"
+
+  bookings-db:
+    restart: always
+    image: mongo:6.0.7
+    container_name: bookings-db
+    command: --bind_ip_all
+    volumes:
+        - ./data/bookings-data:/data/db
+    environment:
+        MONGO_INITDB_ROOT_USERNAME: "${BOOKINGS_DB_USER}"
+        MONGO_INITDB_ROOT_PASSWORD: "${BOOKINGS_DB_PASSWORD}"
+    networks:
+      - proxy
+    ports:
+      - 27017:27017
+
+  bookings-rabbitMQ:
+    image: rabbitmq:3.12-management
+    hostname: rabbitmq
+    container_name: bookings-rabbitmq
+    labels:
+      NAME: "rabbitmq"
+    environment:
+      RABBITMQ_DEFAULT_VHOST: "/"
+      RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
+      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASSWORD}"
+      RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: -rabbit log_levels [{connection,error},{default,error}] disk_free_limit 2147483648
+    networks:
+      - proxy
+    ports:
+      - 15672:15672
+      - 5672:5672
+    volumes:
+      - ./data/rabbitmq:/var/lib/rabbitmq
+
+volumes:
+  bookings-data:
   
 networks:
   proxy:
