Added hotels service separtate from bookings api

--- a/Bookings.Api/appsettings.Development.json
+++ b/Bookings.Api/appsettings.Development.json
@@ -9,8 +9,6 @@
   "BookingDatabase": {
     "DatabaseName": "BookingStore",
     "BookingsCollectionName": "Bookings",
-    "BookingsStateCollectionName": "BookingsState",
-    "HotelsCollectionName": "Hotels",
-    "ClientsCollectionName": "Clients"
+    "BookingsStateCollectionName": "BookingsState"
   }
 }
