Added separate BookingQueryService and BookingService in Domain layer as abstraction and in repo and infra layers realizations

--- a/Bookings.Infrastructure/Bookings.Infrastructure.csproj
+++ b/Bookings.Infrastructure/Bookings.Infrastructure.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Bookings.Domain\Bookings.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Protobuf Include="..\Protos\bookings.proto" GrpcServices="Client" />
+  </ItemGroup>
+
 </Project>
