--- a/Bookings.Domain/Bookings.Domain.csproj
+++ b/Bookings.Domain/Bookings.Domain.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.1.3" />
     <PackageReference Include="Riok.Mapperly" Version="3.3.0" />
   </ItemGroup>
 
