--- a/Bookings.Api/appsettings.json
+++ b/Bookings.Api/appsettings.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PostgresDatabase": "Host=localhost;Database=bookings_db;Username=bookings_user;Password=bookings_password",
+    "MongoDatabase": "mongodb://admin:password@localhost:27017/bookings?authSource=admin"
+  },
+  "PostgresDatabase": {
+    "ConnectionString": "Host=localhost;Database=bookings_db;Username=bookings_user;Password=bookings_password",
+    "DatabaseName": "bookings_db"
+  },
+  "BookingsStoreDatabaseSettings": {
+    "ConnectionString": "mongodb://admin:password@localhost:27017/bookings?authSource=admin",
+    "DatabaseName": "bookings"
   }
 }
